FIX Need more spacing between search, slider, and scrolling options down the page like in the design - it is all too condensed together

--- a/src/app/pages/library-programs/library-programs.page.scss
+++ b/src/app/pages/library-programs/library-programs.page.scss
@@ -14,7 +14,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 16px 32px;
+        padding: 22px 32px;
         border-bottom: 0.5px solid $gray;
 
         ion-searchbar {
@@ -48,8 +48,21 @@
                 width: 100%;
             }
         }
+
+        &--pt {
+            padding-top: 12px;
+            padding-bottom: 36px;
+        }
     }
 
+    &__title {
+        padding: 22px 32px 0 32px;
+
+        font-family: $font-family-oswald;
+        font-size: 20px;
+        font-weight: 300;
+        color: $dark-gray1;
+    }
 }
 .slide {
     position: relative;
@@ -84,9 +97,11 @@
 }
 
 .library__list {
-    padding: 0 32px;
+    padding: 26px 32px 36px 32px;
 
     ion-card {
+        margin-top: 10px;
+        margin-bottom: 0;
         margin-left: 0;
         margin-right: 0;
         border-radius: 2px;
